fix negative margin and overflow style issues.

--- a/src/generator/css/base.less
+++ b/src/generator/css/base.less
@@ -798,7 +798,7 @@ body .content .hero-banner {
     }
 
     .banner-text {
-        @apply w-full lg:w-4/5 xl:w-5/6 mr-14 mt-14;
+        @apply w-full lg:w-4/5 xl:w-5/6 sm:mr-14 mt-14;
 
         @media (max-width: 640px) {
             @apply text-center;
@@ -827,14 +827,14 @@ body .content .hero-banner {
 
 /** Grid */
 .what-we-do {
-  @apply bg-[var(--color-accent-dark)] py-24 sm:py-52 px-5 sm:px-20 -mt-32 z-10 mb-40;
+  @apply bg-[var(--color-accent-dark)] py-24 sm:py-52 px-0 sm:px-20 -mt-32 z-10 mb-40;
   clip-path: polygon(100% 4.5%, 0% 0% ,0% 100%, 100% 93.5%);
   position: relative;
 
   h2 {
     font-family: var(--font-h1);
     font-weight: 700;
-    @apply text-3xl sm:text-6xl mb-16 sm:mb-28 -ml-8;
+    @apply text-3xl pl-5 sm:pl-0 sm:text-6xl mb-16 sm:mb-28 -ml-8;
     border: unset;
     span {
       @apply text-[var(--color-accent)];
@@ -920,26 +920,26 @@ body .content .hero-banner {
   .grid > :nth-child(2),
   .grid > :nth-child(6) {
     grid-column: 7 / end;
-    @apply mr-0 sm:mr-11;
+    @apply mx-6 sm:mr-11 sm:ml-0;
 
     @media (max-width: 640px) {
         grid-column: 1 / 13;
         padding-bottom: 1rem;
         padding-top: 0;
-        margin-left: 0;
+        /* margin-left: 0; */
     }
   }
 
   .grid > :nth-child(3),
   .grid > :nth-child(7) {
     grid-column: 1 / 7;
-    @apply ml-11;
+    @apply mx-6 sm:ml-11 sm:mr-0;
 
     @media (max-width: 640px) {
         grid-column: 1 / 13;
         padding-bottom: 1rem;
         padding-top: 0;
-        margin-left: 0;
+        /* margin-left: 0; */
     }
   }
 
@@ -953,7 +953,7 @@ body .content .hero-banner {
         margin-bottom: 0;
         margin-right: 0;
         margin-top: -8rem;
-        margin-left: -3rem;
+        margin-left: 0;
         grid-column: 1 / 9;
     }
   }
@@ -967,7 +967,7 @@ body .content .hero-banner {
         margin-bottom: 0;
         margin-left: 0;
         margin-top: -8rem;
-        margin-right: -3rem;
+        margin-right: 0;
     }
   }
 
@@ -1673,4 +1673,3 @@ body.post-page {
   flex: 0 0 100%;
   min-width: 0;
 }
-
